--- a/Part2/broker-manager/Dockerfile
+++ b/Part2/broker-manager/Dockerfile
@@ -9,9 +9,15 @@ ENV PYTHONUNBUFFERED 1
 
 # install dependencies
 RUN pip install --upgrade pip
-COPY ./requirements.txt /usr/src/app/requirements.txt
+COPY ./Part2/broker-manager/requirements.txt /usr/src/app/requirements.txt
 RUN pip install -r requirements.txt
-COPY ./responses.py /usr/src/app/responses.py
+COPY ./Part2/broker-manager/responses.py /usr/src/app/responses.py
 
-# copy project
-COPY . /usr/src/app/
+ADD PySyncObj /usr/src/app/PySyncObj
+
+WORKDIR /usr/src/app/PySyncObj
+
+RUN python setup.py develop
+WORKDIR /usr/src/app/
+
+ADD ./Part2/broker-manager /usr/src/app/
