--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,203 @@
+version: '3.8'
+
 services:
+  wbm1:
+    build: 
+      dockerfile: ./Part2/broker-manager/Dockerfile
+      context: .
+    command: python main.py wmd1
+    volumes:
+      - ./Part2/broker-manager:/usr/src/app/
+    ports:
+      - 5000:5000
+    env_file:
+      - ./.env.dev
+    depends_on:
+      - wmd1
+  
+  wmd1:
+    image: postgres:13-alpine
+    volumes:
+      - wmd1:/var/lib/postgresql/data/
+    environment: 
+      - POSTGRES_PASSWORD=admin
+  
+  rbm1:
+    build: 
+      dockerfile: ./Part2/broker-manager/Dockerfile
+      context: .
+    command: python read.py rmd1
+    volumes:
+      - ./Part2/broker-manager:/usr/src/app/
+    ports:
+      - 5002:5000
+    env_file:
+      - ./.env.dev
+    depends_on:
+      - rmd1
+      - wbm1
+  
+  rmd1:
+    image: postgres:13-alpine
+    volumes:
+      - rmd1:/var/lib/postgresql/data/
+    environment: 
+      - POSTGRES_PASSWORD=admin
+  
+  rbm2:
+    build: 
+      dockerfile: ./Part2/broker-manager/Dockerfile
+      context: .
+    command: python read.py rmd2
+    volumes:
+      - ./Part2/broker-manager:/usr/src/app/
+    ports:
+      - 5003:5000
+    env_file:
+      - ./.env.dev
+    depends_on:
+      - rmd2
+      - wbm1
+  
+  rmd2:
+    image: postgres:13-alpine
+    volumes:
+      - rmd2:/var/lib/postgresql/data/
+    environment: 
+      - POSTGRES_PASSWORD=admin
+
   b1:
-      build: 
-        dockerfile: ./test/Dockerfile 
-        context: .
-      command: python broker.py b1 5000 5001 
-      
-      
-      
+    build: 
+      dockerfile: ./Part2/broker/Dockerfile
+      context: .
+    command: python main.py b1 5000 5001 db1 wbm1
+    # volumes:
+    #   - ./Part2/broker:/usr/src/app/
+    ports:
+      - 5001:5000
+    env_file:
+      - ./.env.dev
+    depends_on:
+      - wbm1
+      - db1
+  
+  db1:
+    image: postgres:13-alpine
+    volumes:
+      - db1:/var/lib/postgresql/data/
+    environment: 
+      - POSTGRES_PASSWORD=admin
+  
   b2:
-      build: 
-        dockerfile: ./test/Dockerfile 
-        context: .
-      command: python broker.py b2 5000 5001 b1 
-      depends_on: 
-        - b1
-      
-  # b3:
-  #     build: 
-  #       dockerfile: ./test/Dockerfile 
-  #       context: .
-  #     command: python broker.py b3 5000 5001 b1 b2 
-  #     depends_on: 
-  #       - b1 
-  #       - b2
+    build: 
+      dockerfile: ./Part2/broker/Dockerfile
+      context: .
+    command: python main.py b2 5000 5001 db2 wbm1
+    # volumes:
+    #   - ./Part2/broker:/usr/src/app/
+    ports:
+      - 5004:5000
+    env_file:
+      - ./.env.dev
+    depends_on:
+      - wbm1
+      - db2
+  
+  db2:
+    image: postgres:13-alpine
+    volumes:
+      - db2:/var/lib/postgresql/data/
+    environment: 
+      - POSTGRES_PASSWORD=admin
+
+  b3:
+    build: 
+      dockerfile: ./Part2/broker/Dockerfile
+      context: .
+    command: python main.py b3 5000 5001 db3 wbm1
+    # volumes:
+    #   - ./Part2/broker:/usr/src/app/
+    ports:
+      - 5005:5000
+    env_file:
+      - ./.env.dev
+    depends_on:
+      - wbm1
+      - db3
+  
+  db3:
+    image: postgres:13-alpine
+    volumes:
+      - db3:/var/lib/postgresql/data/
+    environment: 
+      - POSTGRES_PASSWORD=admin
+
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./Part2/nginx.conf:/etc/nginx/nginx.conf:ro
+    ports: 
+      - 8080:80
+    depends_on:
+      - wbm1
+      - rbm1
+      - rbm2
+
+
+volumes:
+  wmd1:
+  rmd1:
+  rmd2:
+  db1:
+  db2:
+  db3:
+
+
+
+# Only to test brokers
+# version: '3.8'
+# services:
+#   b1:
+#     build: 
+#       dockerfile: ./test/Dockerfile
+#       context: .
+#     command: python broker.py b1 5000 5001 b2 b3
+#     # volumes:
+#     #   - ./test/broker:/usr/src/app/
+#     # ports:
+#     #   - 5001:5000
+#     # env_file:
+#     #   - ./.env.dev
+#     # depends_on:
+#     #   - wbm1
+#     #   - db1
+
+
+#   b2:
+#     build: 
+#       dockerfile: ./test/Dockerfile
+#       context: .
+#     command: python broker.py b2 5000 5001 b1 b3
+#     # volumes:
+#     #   - ./test/broker:/usr/src/app/
+#     # ports:
+#     #   - 5004:5000
+#     # env_file:
+#     #   - ./.env.dev
+#     # depends_on:
+#     #   - db2
+
+#   b3:
+#     build: 
+#       dockerfile: ./test/Dockerfile
+#       context: .
+#     command: python broker.py b3 5000 5001 b1 b2
+#     # volumes:
+#     #   - ./test/broker:/usr/src/app/
+#     # ports:
+#     #   - 5005:5000
+#     # env_file:
+#     #   - ./.env.dev
+#     # depends_on:
+#     #    wbm1
+#     #   - db3
